# dotspotter

./: .gitignore  README.md  pyproject.toml
dotspotter/: cli.py  gui.py  logging_utils.py  spot_dots.py  spot_nuclei.py  spotter.py
