[tool.poetry]
name = "dotspotter"
version = "1.0.0"
description = "A fluorescence spot detection tool for microscopy"
authors = ["Scott Maxwell"]
readme = "README.md"
packages = [{include = "dotspotter"}] # Added for safety

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.1.1"
opencv-python = ">=4.8.1.78"
matplotlib = ">=3.8.0"
tqdm = ">=4.66.1"
scikit-image = ">=0.22.0"
numpy = ">=1.26.0"
PyQt6 = ">=6.6.0"

[tool.poetry.scripts]
dotspotter = "dotspotter.cli:main"
dotspotter-gui = "dotspotter.gui:main"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
